syntax = "proto3";
option csharp_namespace = "pwiz.Skyline.Model.Results.ProtoBuf";
import "google/protobuf/struct.proto";
message ChromatogramGroupData {
	message TimeList {
		repeated float times = 1;
	}
	message ScanIdList {
		repeated int32 scanIds = 2;
	}

	repeated TimeList timeLists = 1;
	repeated ScanIdList scanIdLists = 2;
	
	message Chromatogram {
		int32 timeListIndex = 1; // One-based index into "timeLists" indicating which set of times to use.
		repeated float intensities = 2;
		repeated float massErrorsDeprecated = 3;
		repeated sint32 massErrors100X = 5;
		int32 scanIdListIndex = 4; // One-based index into "scanIdLists" or zero if no scanIds
	}
	message TimeIntervals {
		repeated float startTimes = 1;
		repeated float endTimes = 2;
	}
	repeated Chromatogram chromatograms = 3;
	double interpolatedStartTime = 4;
	double interpolatedEndTime = 5;
	int32 interpolatedNumPoints = 6;
	double interpolatedDelta = 7;
	bool inferZeroes = 9;
	TimeIntervals timeIntervals = 10;
}
message ResultFileMetaDataProto {
	message SpectrumMetadata {
		double retentionTime = 1;
		repeated int32 scanIdParts = 2;
		string scanIdText = 3;
		repeated int32 precursorIndex = 4;
		int32 scanDescriptionIndex = 5;
		int32 presetScanConfiguration = 6;
	}

	message Precursor {
		double targetMz = 1;
		double isolationWindowLower = 2;
		double isolationWindowUpper = 3;
		double collisionEnergy = 4;
		int32 msLevel = 5;
	}

	repeated SpectrumMetadata spectra = 1;
	repeated Precursor precursors = 2;
	repeated string scanDescriptions = 3;
}
message ChromatogramGroupIdsProto {
	enum FilterOperation {
		FILTER_OP_HAS_ANY_VALUE = 0;
		FILTER_OP_EQUALS = 1;
		FILTER_OP_NOT_EQUALS = 2;
		FILTER_OP_IS_BLANK = 3;
		FILTER_OP_IS_NOT_BLANK = 4;
		FILTER_OP_IS_GREATER_THAN = 5;
		FILTER_OP_IS_LESS_THAN = 6;
		FILTER_OP_IS_GREATER_THAN_OR_EQUAL_TO = 7;
		FILTER_OP_IS_LESS_THAN_OR_EQUAL_TO = 8;
		FILTER_OP_CONTAINS = 9;
		FILTER_OP_NOT_CONTAINS = 10;
		FITLER_OP_STARTS_WITH = 11;
		FILTER_OP_NOT_STARTS_WITH = 12;
	}
	message AccessionNumber {
		int32 typeName = 1;
		string value = 2;;
	}

	message Target {
		string modifiedPeptideSequence = 1;
		string formula = 2;
		string name = 3;
		double monoMass = 4;
		double averageMass = 5;
		repeated AccessionNumber accessionNumbers = 6;
	}
	repeated Target targets = 1;
	repeated string accessionTypeNames = 2;
	repeated string scoreTypeNames = 3;
	repeated SpectrumFilter filters = 4;
	repeated ChromatogramGroupId chromatogramGroupIds = 5;

	message ChromatogramGroupId {
		int32 targetIndex = 1; // one-based index into "targets"
		int32 filterIndex = 2; // one-based index into "filter"
	}

	message SpectrumFilter {
		message Predicate {
			string propertyPath = 1;
			FilterOperation operation = 2;
			google.protobuf.Value operand = 3;
		}
		repeated Predicate predicates = 1;
	}
}